--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Mads Mikkel's Blog
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Welcome!</h1>
+	<p>This is my blog. Here you'll find C# example code. I'm a teacher in programming and I hope that this blog will provide more insight to new devs.</p>
 </div><!-- /.blurb -->
