--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Mads Mikkel's Blog
 ---
 <div class="blurb">
-	<h1>Welcome!</h1>
-	<p>This is my blog. Here you'll find C# example code. I'm a teacher in programming and I hope that this blog will provide more insight to new devs.</p>
+	<h1>Mads Mikkel's Blog</h1>
+	<p><em>Welcome!</em><br>This is my blog. Here you'll find C# example code. I'm a teacher in programming and I hope that this blog will provide more insight to new devs.</p>
 </div><!-- /.blurb -->
